# xG90

./: .env.template  .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml  settings.py
.github/workflows/: update_data.yml
dashboard/: app.py
dashboard/components/: radar_chart.py  ui_theme.py
dashboard/pages/: 01_team_overview.py  02_match_analysis.py
models/: tactical.py
pipeline/: features.py  ingest.py  orchestrate.py  transform.py
scripts/: check_setup.py  create_bucket.py  warm_up_lakehouse.py
sql/: gold_fingerprints.sql  silver_carries.sql  silver_events.sql  silver_lineups.sql  silver_pressures.sql  silver_shots.sql
