[project]
name = "90xg"
version = "0.1.0"
description = "Football data lakehouse with team tactical fingerprinting"
authors = [
    {name = "Suhayl Shokirov"}
]
dependencies = [
    "statsbombpy",
    "duckdb",
    "prefect",
    "streamlit",
    "plotly",
    "mplsoccer",
    "pyarrow",
    "boto3",
    "pandas",
    "python-dotenv",
    "pytest",
    "moto",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
